[project]
name = "repl-nix-voicetherapistai"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.10.8",
    "aiortc>=1.9.0",
    "gtts>=2.5.3",
    "numpy>=2.1.1",
    "openai>=1.51.0",
    "pipreqs>=0.5.0",
    "pyaudio>=0.2.14",
    "speechrecognition>=3.10.4",
    "streamlit>=1.39.0",
]
